[tool.poetry]
name = "ai-hedge-fund"
version = "0.1.0"
description = "An AI-powered hedge fund that uses multiple agents to make trading decisions"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [
    { include = "src" }
]
[tool.poetry.dependencies]
python = "^3.13"
langchain = ">=0.3.0"
langchain-openai = ">=0.3.0"
langgraph = ">=0.2.56"
pandas = "^2.1.0"
numpy = ">=2.2.0 <2.3.0"
python-dotenv = "^1.0.1"
matplotlib = "^3.9.4"
yfinance = "^0.2.54"
akshare = "^1.16.4"
requests = "^2.31.0"
beautifulsoup4 = "^4.13.3"
openai = "^1.63.2"
langchain-core = "^0.3.36"
google-generativeai = "^0.8.4"
backoff = "^2.2.1"
google-genai = "^1.2.0"
langchain-community = "^0.3.13"
langchain-experimental = "^0.3.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
